# rfc3987-syntax2

./: .editorconfig  .gitignore  .mypy.ini  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: perf.yml  python-perf.yml  python-publish.yml  python-tests.yml  zizmor.yml
docs/: conf.py  index.rst  install.rst  requirements.txt
docs/_dev/: publish.md
res/: rfc3987.abnf  rfc3987.lark  rfc3987.optimized1.lark  rfc3987.optimized2.lark  rfc3987.optimized3.lark
src/rfc3987_syntax/: syntax_helpers.py  syntax_rfc3987.earley.lark  syntax_rfc3987.lark
src/rfc3987_syntax2/: __init__.py  is_valid_syntax_term.py  py.typed  syntax_helpers.py  syntax_rfc3987.lark  utils.py
tests/: __init__.py  is_valid_syntax_term.py  test_exports_exists.py  test_is_valid_syntax_warning.py  test_lazy_attrs.py  test_perf.py  test_performance.py  test_syntax.py  test_term_validators.py  valid_syntax.json
tests/_data/: .editorconfig  .gitattributes  invalid_syntax.json  valid_syntax.json
