[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfc3987-syntax2"
version = "1.3.0"
description = "Helper functions to syntactically validate strings according to RFC 3987."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["RFC 3987", "RFC3987", "validator", "syntax", "parser"]
authors = [
    { name = "Jan Kowalleck" },
    { name = "Will Riley", email = "wanderingwill@gmail.com" }
]
classifiers = [
    # ALPHA - not all features of RFC 3987 are implemented, yet
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["lark>=1.2.2"]

[project.urls]
Homepage = "https://github.com/jkowalleck/rfc3987-syntax2"
Documentation = "https://github.com/jkowalleck/rfc3987-syntax2#readme"
Issues = "https://github.com/jkowalleck/rfc3987-syntax2/issues"
Source = "https://github.com/jkowalleck/rfc3987-syntax2"

[project.optional-dependencies]
testing = [
    "mypy>=1.15,<3",
    "typing_extensions>=4.16.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "perf: deterministic parser performance baseline tests",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.*",
    "/_*",
]
include = [
    "/src",
    "/tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/rfc3987_syntax2"]
